--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-chunk-split": "^0.5.0"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
