--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.2.0",
-    "vite-plugin-chunk-split": "^0.5.0"
+    "vite": "^6.2.0"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
